Add settings interface bases.

--- a/web/templates/login/index.html
+++ b/web/templates/login/index.html
@@ -1,6 +1,6 @@
 <div data-ng-app="LoginApp" layout="column" flex>
     <md-content layout="row" layout-align="center">
-        <form flex="50" data-ng-submit="vm.login()" data-ng-controller="MainController as vm">
+        <form flex="50" data-ng-submit="vm.login()" data-ng-controller="Login.MainController as vm">
             <md-card>
                 <md-card-title>
                     <span class="md-headline">{{ 'LOGIN_HEADLINE' | translate }}</span>
