--- a/web/templates/settings/index.html
+++ b/web/templates/settings/index.html
@@ -1,4 +1,4 @@
-<div data-ng-app="SettingsApp" layout="column" flex>
+<div data-ng-app="Settings" layout="column" flex>
     <div data-ng-controller="Settings.MainController as vm">
         <h1>TODO: add content</h1>
     </div>
