Change settings dialog to the directive.

--- a/web/templates/settings/index.html
+++ b/web/templates/settings/index.html
@@ -1,9 +1,3 @@
 <div data-ng-app="Settings" layout="column" flex>
-    <md-card data-ng-controller="Settings.UserSettingsController as vm">
-        <md-card-title>
-            <md-card-title-text>
-                <span class="md-headline">{{ 'USER_SETTINGS' | translate }}</span>
-            </md-card-title-text>
-        </md-card-title>
-    </md-card>
+    <data-user-settings></data-user-settings>
 </div>
