Add bases for the danger zone. Make all the setting dialogs to have their own scopes.

--- a/web/templates/settings/index.html
+++ b/web/templates/settings/index.html
@@ -1,3 +1,4 @@
-<div data-ng-app="Settings" layout="column" flex>
-    <data-user-settings></data-user-settings>
+<div data-ng-app="Settings" layout="row" flex>
+    <data-user-settings flex></data-user-settings>
+    <danger-zone flex></danger-zone>
 </div>
