Add password change functionality.

--- a/web/templates/settings/partials/danger-zone.html
+++ b/web/templates/settings/partials/danger-zone.html
@@ -9,7 +9,7 @@
             <span>{{ 'CHANGE_PASSWORD' | translate }}</span>
             <md-input-container class="md-block" flex>
                 <label>{{ ::'OLD_PASSWORD' | translate }}</label>
-                <input id="user_settings_old_password" type="text"
+                <input id="user_settings_old_password" type="password"
                        data-ng-model="vm.form.oldPassword"
                        data-ng-disabled="vm.loading"
                 />
@@ -17,7 +17,7 @@
 
             <md-input-container class="md-block" flex>
                 <label>{{ ::'NEW_PASSWORD' | translate }}</label>
-                <input id="user_settings_new_password" type="text"
+                <input id="user_settings_new_password" type="password"
                        data-ng-model="vm.form.newPassword"
                        data-ng-disabled="vm.loading"
                 />
@@ -25,7 +25,7 @@
 
             <md-input-container class="md-block" flex>
                 <label>{{ ::'NEW_PASSWORD_AGAIN' | translate }}</label>
-                <input id="user_settings_new_password_again" type="text"
+                <input id="user_settings_new_password_again" type="password"
                        data-ng-model="vm.form.newPasswordAgain"
                        data-ng-disabled="vm.loading"
                 />
