Implement app settings interface bases.

--- a/web/templates/settings/index.html
+++ b/web/templates/settings/index.html
@@ -1,4 +1,5 @@
-<div data-ng-app="Settings" layout="row" flex>
+<div data-ng-app="Settings" layout="row" layout-md="column" flex>
     <data-user-settings flex></data-user-settings>
     <danger-zone flex></danger-zone>
+    <app-settings flex></app-settings>
 </div>
