--- a/web/templates/settings/partials/danger-zone.html
+++ b/web/templates/settings/partials/danger-zone.html
@@ -32,7 +32,7 @@
             </md-input-container>
 
             <md-card-actions layout="row" layout-align="end center">
-                <md-button data-ng-disabled="vm.loading" type="submit">
+                <md-button id="btn_danger_zone_save" data-ng-disabled="vm.loading" type="submit">
                     {{ ::'SAVE' | translate }}
                 </md-button>
             </md-card-actions>
