--- a/web/templates/settings/partials/user-settings.html
+++ b/web/templates/settings/partials/user-settings.html
@@ -38,7 +38,7 @@
                 />
             </md-input-container>
             <md-card-actions layout="row" layout-align="end center">
-                <md-button data-ng-disabled="vm.loading" type="submit">
+                <md-button id="btn_user_settings_save" data-ng-disabled="vm.loading" type="submit">
                     {{ ::'SAVE' | translate }}
                 </md-button>
             </md-card-actions>
