Load settings data from the server.

--- a/web/templates/settings/partials/app-settings.html
+++ b/web/templates/settings/partials/app-settings.html
@@ -1,4 +1,4 @@
-<md-card>
+<md-card data-ng-init="vm.load()">
     <md-card-title>
         <md-card-title-text>
             <span class="md-headline">{{ ::'APP_SETTINGS' | translate }}</span>
