Add bases for the ApiManager interface.

--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -7,4 +7,13 @@
             <span>{{ ::'DASHBOARD' | translate }}</span>
         </md-sidemenu-button>
     </md-sidemenu-group>
+
+    <md-sidemenu-group>
+        <md-subheader class="md-no-sticky">{{ ::'MANAGEMENT' | translate }}</md-subheader>
+
+        <md-sidemenu-button href="#/apis">
+            <md-icon>leak_add</md-icon>
+            <span>{{ ::'API_MANAGEMENT' | translate }}</span>
+        </md-sidemenu-button>
+    </md-sidemenu-group>
 </md-sidemenu>
