Load data to the api manager interface.

--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -1,1 +1,6 @@
-<h1>TODO!</h1>
+<md-content layout="column" flex
+            data-ng-controller="ApiManager.MainController as vm"
+            data-ng-init="vm.load()"
+>
+
+</md-content>
