--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -1,6 +1,54 @@
-<md-content layout="column" flex
+<md-content layout="column" flex layout-fill
             data-ng-controller="ApiManager.MainController as vm"
             data-ng-init="vm.load()"
 >
+    <md-content layout="column" flex md-whiteframe="4">
+        <md-toolbar layout="row">
+            <div class="md-toolbar-tools">
+                <span>{{ ::'LIST_OF_APIS' | translate }}</span>
+            </div>
+        </md-toolbar>
+        <md-content layout="row" flex>
+            <md-content layout="column" flex>
+                <md-table-container layout="column" flex>
+                    <table md-table md-row-select multiple
+                           data-ng-model="vm.selected"
+                    >
+                        <thead md-head>
+                            <tr md-row>
+                                <th md-column><span>{{ ::'NAME' | translate }}</span></th>
+                                <th md-column><span>{{ ::'URL' | translate }}</span></th>
+                                <th md-column><span>{{ ::'TYPE' | translate }}</span></th>
+                                <th md-column><span>{{ ::'LAST_UPDATE' | translate }}</span></th>
+                            </tr>
+                        </thead>
+                        <tbody md-body>
+                            <tr md-row md-auto-select data-ng-repeat="api in vm.data">
+                                <td md-cell>{{ ::api.name }}</td>
+                                <td md-cell>{{ ::api.url }}</td>
+                                <td md-cell>{{ ::api.type }}</td>
+                                <td md-cell>{{ ::api.lastUpdate | apiDate | date:'dd.MM.yyyy' }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </md-table-container>
 
+                <md-table-pagination md-limit="30"
+                                     md-limit-options="[30, 50, 100]"
+                                     md-page="vm.page"
+                                     md-total="{{ vm.data.length }}"
+                                     md-on-paginate="getApis"
+                                     md-page-select
+                ></md-table-pagination>
+            </md-content>
+
+            <md-sidenav class="md-sidenav-right"
+                        md-component-id="right"
+                        md-is-locked-open="true"
+                        md-whiteframe="4"
+            >
+                <h1>Implement content</h1>
+            </md-sidenav>
+        </md-content>
+    </md-content>
 </md-content>
