--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -23,7 +23,14 @@
                             </tr>
                         </thead>
                         <tbody md-body>
-                            <tr md-row md-auto-select data-ng-repeat="api in vm.data">
+                            <tr md-row md-auto-select
+                                data-ng-repeat="api in vm.data"
+                                md-select="api"
+                                md-select-id="name"
+                                md-on-select="vm.onSelect"
+                                md-on-deselect="vm.onDeselect"
+                                multiple="false"
+                            >
                                 <td md-cell>{{ ::api.name }}</td>
                                 <td md-cell>{{ ::api.url }}</td>
                                 <td md-cell>{{ ::api.type }}</td>
@@ -46,8 +53,33 @@
                         md-component-id="right"
                         md-is-locked-open="true"
                         md-whiteframe="4"
+                        layout-padding
             >
-                <h1>Implement content</h1>
+                <form data-ng-submit="vm.save()">
+                    <md-input-container class="md-block" flex>
+                        <label>{{ ::'NAME' | translate }}</label>
+                        <input type="text" data-ng-model="vm.api.name" data-ng-disabled="!vm.api"/>
+                    </md-input-container>
+
+                    <md-input-container class="md-block" flex>
+                        <label>{{ ::'URL' | translate }}</label>
+                        <input type="text" data-ng-model="vm.api.url" data-ng-disabled="!vm.api" />
+                    </md-input-container>
+
+                    <md-input-container class="md-block" flex>
+                        <label>{{ ::'TYPE' | translate }}</label>
+                        <input type="text" data-ng-model="vm.api.type" data-ng-disabled="!vm.api" />
+                    </md-input-container>
+
+                    <md-content layout="row" layout-align="end center">
+                        <md-button data-ng-click="vm.cancel()" data-ng-disabled="!vm.api">
+                            {{ ::'CANCEL' | translate }}
+                        </md-button>
+                        <md-button type="submit" data-ng-disabled="!vm.api">
+                            {{ ::'SAVE' | translate }}
+                        </md-button>
+                    </md-content>
+                </form>
             </md-sidenav>
         </md-content>
     </md-content>
