--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -6,6 +6,27 @@
         <md-toolbar layout="row">
             <div class="md-toolbar-tools">
                 <span>{{ ::'LIST_OF_APIS' | translate }}</span>
+
+                <span flex></span>
+
+                <md-button class="md-icon-button"
+                           data-ng-click="vm.load()"
+                >
+                    <md-icon>autorenew</md-icon>
+                </md-button>
+
+                <md-button class="md-icon-button"
+                           data-ng-click="vm.createNewApi()"
+                >
+                    <md-icon>add</md-icon>
+                </md-button>
+
+                <md-button class="md-icon-button"
+                           data-ng-disabled="vm.selected.length < 1"
+                           data-ng-click="vm.removeApis()"
+                >
+                    <md-icon>delete</md-icon>
+                </md-button>
             </div>
         </md-toolbar>
         <md-content layout="row" flex>
