--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -38,6 +38,7 @@
                         <thead md-head>
                             <tr md-row>
                                 <th md-column><span>{{ ::'NAME' | translate }}</span></th>
+                                <th md-column class="text-center"><span>{{ ::'ACTIVE' | translate }}</span></th>
                                 <th md-column><span>{{ ::'URL' | translate }}</span></th>
                                 <th md-column><span>{{ ::'TYPE' | translate }}</span></th>
                                 <th md-column><span>{{ ::'LAST_UPDATE' | translate }}</span></th>
@@ -53,6 +54,9 @@
                                 multiple="false"
                             >
                                 <td md-cell>{{ ::api.name }}</td>
+                                <td md-cell class="text-center">
+                                    <md-icon>{{ ::api.active ? 'play' : 'pause' }}</md-icon>
+                                </td>
                                 <td md-cell>{{ ::api.url }}</td>
                                 <td md-cell>{{ ::api.type }}</td>
                                 <td md-cell>{{ ::api.lastUpdate | apiDate | date:'dd.MM.yyyy' }}</td>
