Implement field removal from the api.

--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -105,7 +105,9 @@
                             >
                                 <md-icon>add</md-icon>
                             </md-button>
-                            <md-button class="md-icon-button">
+                            <md-button class="md-icon-button"
+                                       data-ng-click="vm.removeApiColumn()"
+                            >
                                 <md-icon>delete</md-icon>
                             </md-button>
                         </div>
@@ -144,7 +146,9 @@
                     </md-table-container>
 
                     <md-content layout="row" layout-align="end center">
-                        <md-button data-ng-click="vm.cancel()" data-ng-disabled="!vm.api">
+                        <md-button data-ng-click="vm.cancel()"
+                                   data-ng-disabled="!vm.api"
+                        >
                             {{ ::'CANCEL' | translate }}
                         </md-button>
                         <md-button type="submit" class="md-primary md-raised"
