Show the amount of fields in the API list row.

--- a/web/templates/api-manager/index.html
+++ b/web/templates/api-manager/index.html
@@ -42,6 +42,9 @@
                                 <th md-column class="text-center"><span>{{ ::'ACTIVE' | translate }}</span></th>
                                 <th md-column><span>{{ ::'URL' | translate }}</span></th>
                                 <th md-column><span>{{ ::'TYPE' | translate }}</span></th>
+                                <th md-column class="text-center">
+                                    <span><md-icon>assignment</md-icon></span>
+                                </th>
                                 <th md-column><span>{{ ::'LAST_UPDATE' | translate }}</span></th>
                             </tr>
                         </thead>
@@ -59,6 +62,7 @@
                                 </td>
                                 <td md-cell>{{ ::api.url }}</td>
                                 <td md-cell>{{ ::api.type }}</td>
+                                <td md-cell class="text-center">{{ ::api.columns.length }}</td>
                                 <td md-cell>{{ ::api.lastUpdate | apiDate | date:'dd.MM.yyyy' }}</td>
                             </tr>
                         </tbody>
